# fraud-detection-ecommerce-banking

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_github.sh
.github/workflows/: unittests.yml
notebooks/: README.md  eda-creditcard.ipynb  eda-fraud-data.ipynb  modeling.ipynb  shap-explainability.ipynb  task1-comparative-analysis.ipynb
src/: __init__.py  cross_validator.py  data_cleaner.py  data_transformer.py  eda_analyzer.py  feature_engineer.py  geo_integrator.py  hyperparameter_tuner.py  imbalance_handler.py  model_builder.py  model_comparator.py  model_evaluator.py  model_explainer.py  utils.py
tests/: test_basic.py
