[project]
name = "fraud-detection"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
description = "Fraud detection system for e-commerce and banking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.3.5",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
    "shap>=0.50.0",
    "imbalanced-learn>=0.14.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "black>=25.12.0",
    "flake8>=7.3.0",
    "jupyter>=1.0.0",
    "notebook>=7.5.1",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test"]
python_functions = ["test_*"]
addopts = "-v --tb=short"